Regenerate all clients using OAG 7.12.0 .