@@ -43,7 +43,7 @@ import javax.validation.Valid;
 
 
 @io.swagger.annotations.Api(description = "the blue API")
-@javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaJerseyServerCodegen", date = "2024-03-15T14:14:47.059425590Z[Etc/UTC]", comments = "Generator version: 7.4.0")
+@javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaJerseyServerCodegen", date = "2025-04-27T08:09:40.083437374Z[Etc/UTC]", comments = "Generator version: 7.12.0")
 public class BlueApi  {
    private final BlueApiService delegate;
 
@@ -54,7 +54,7 @@ public class BlueApi  {
          String implClass = servletContext.getInitParameter("BlueApi.implementation");
          if (implClass != null && !"".equals(implClass.trim())) {
             try {
-               delegate = (BlueApiService) Class.forName(implClass).newInstance();
+               delegate = (BlueApiService) Class.forName(implClass).getDeclaredConstructor().newInstance();
             } catch (Exception e) {
                throw new RuntimeException(e);
             }
