@@ -30,7 +30,7 @@ import javax.validation.Valid;
 
 
 @io.swagger.annotations.Api(description = "the job API")
-@javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaJerseyServerCodegen", date = "2024-03-15T14:14:47.059425590Z[Etc/UTC]", comments = "Generator version: 7.4.0")
+@javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaJerseyServerCodegen", date = "2025-04-27T08:09:40.083437374Z[Etc/UTC]", comments = "Generator version: 7.12.0")
 public class JobApi  {
    private final JobApiService delegate;
 
@@ -41,7 +41,7 @@ public class JobApi  {
          String implClass = servletContext.getInitParameter("JobApi.implementation");
          if (implClass != null && !"".equals(implClass.trim())) {
             try {
-               delegate = (JobApiService) Class.forName(implClass).newInstance();
+               delegate = (JobApiService) Class.forName(implClass).getDeclaredConstructor().newInstance();
             } catch (Exception e) {
                throw new RuntimeException(e);
             }
